# usedbadger

./: .gitmodules  CMakeLists.txt  badger.cpp  badger.h  error_disk.c  error_disk.h  fat_ramdisk.c  fat_ramdisk.h  layout.h  lfs_pico_flash.c  lfs_pico_flash.h  main.c  main.cpp  reset_interface.c  screen_page.c  screen_page.h  spiffs_config.h  tusb_config.h  usb.c  usb.h  usb_descriptors.c  usb_filesystem.c  usb_msc.c  usb_msc.h  usb_stdio.c
fatfs/: ffconf.h
